tests/parsing/smtlib/v2.7/errors/068_declare-fun_sort_list_unopened_1.smt2
(set-logic ALL)
(declare-fun foo _)
